[gd_scene load_steps=11 format=3 uid="uid://baqywipxpvmcm"]

[ext_resource type="Script" path="res://Main.gd" id="1"]
[ext_resource type="PackedScene" path="res://Mob.tscn" id="2"]
[ext_resource type="PackedScene" path="res://Player.tscn" id="3"]
[ext_resource type="PackedScene" path="res://HUD.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://c8h416f3jw7ug" path="res://art/background.jpg" id="5"]
[ext_resource type="AudioStream" uid="uid://0oqrh73kymkf" path="res://art/gameover.wav" id="6"]
[ext_resource type="AudioStream" uid="uid://b1tvqfp1sbc4m" path="res://art/House In a Forest Loop.ogg" id="7"]
[ext_resource type="PackedScene" path="res://Joystick.tscn" id="8"]
[ext_resource type="Script" path="res://Joystick.gd" id="9"]

[sub_resource type="Curve2D" id="1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 896, 0, 0, 0, 0, 248, 896, 0, 0, 0, 0, 0, 896, 0, 0, 0, 0, 0, 0)
}
point_count = 6

[node name="Main" type="Node"]
script = ExtResource("1")
Mob = ExtResource("2")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -376.0
offset_top = -272.0
offset_right = 824.0
offset_bottom = 928.0
texture = ExtResource("5")

[node name="Joystick" parent="." instance=ExtResource("8")]
position = Vector2(384, 640)
script = ExtResource("9")

[node name="Player" parent="." instance=ExtResource("3")]
gravity_point_center = Vector2(0, 0)
speed = 350

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 288)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("1")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("4")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
