[gd_scene load_steps=11 format=2]

[ext_resource path="res://Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Controls.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://sounds/background.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/explosion2.wav" type="AudioStream" id=7]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=8]
[ext_resource path="res://sounds/lose.wav" type="AudioStream" id=9]
[ext_resource path="res://SplashScreen.tscn" type="PackedScene" id=10]

[node name="Node" type="Node"]
script = ExtResource( 5 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Controls" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
pitch_scale = 0.5

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Game Over" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
pitch_scale = 0.5

[node name="AdMob" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 8 )
banner_id = "ca-app-pub-3940256099942544/6300978111"
rewarded_id = "ca-app-pub-3940256099942544/5224354917"

[node name="SplashScreen" parent="." instance=ExtResource( 10 )]

[connection signal="nuke" from="Controls" to="." method="on_nuke"]
[connection signal="nuke_ad" from="Controls" to="." method="_on_Controls_nuke_ad"]
[connection signal="shield" from="Controls" to="." method="on_shield"]
[connection signal="shield_ad" from="Controls" to="." method="_on_Controls_shield_ad"]
[connection signal="shoot" from="Controls" to="." method="on_shoot"]
[connection signal="area_entered" from="Player" to="." method="_on_Player_area_entered"]
[connection signal="exit_help" from="HUD" to="." method="_on_HUD_exit_help"]
[connection signal="help_pressed" from="HUD" to="." method="_on_HUD_help_pressed"]
[connection signal="paused" from="HUD" to="." method="_on_HUD_paused"]
[connection signal="resume" from="HUD" to="." method="_on_HUD_resume"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="rewarded" from="AdMob" to="." method="_on_AdMob_rewarded"]
[connection signal="rewarded_video_closed" from="AdMob" to="." method="_on_AdMob_rewarded_video_closed"]
[connection signal="rewarded_video_loaded" from="AdMob" to="." method="_on_AdMob_rewarded_video_loaded"]
